Выравнивание по пикселю карточек товара в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -227,141 +227,111 @@
             <h3 class="visually-hidden">Линейка товаров данной категории</h3>
             <ul class="product-line__product-list">
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 3000
-                  </p>
-                  <p class="item-card__old-price">
-                    22500 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    15500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price">22500 Р.</p>
+                    <p class="store-product__current-price button">15500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 6000
-                  </p>
-                  <p class="item-card__old-price">
-                    30500 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    25500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
+                  <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price">30500 Р.</p>
+                  <p class="store-product__current-price button">25500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 2000
-                  </p>
-                  <p class="item-card__old-price"></p>
-                  <p class="item-card__current-price">
-                    12500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price store-product__old-price--none"></p>
+                  <p class="store-product__current-price button">12500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 3000
-                  </p>
-                  <p class="item-card__old-price">
-                    2250 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    15500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price">22500 Р.</p>
+                  <p class="store-product__current-price button">15500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 6000
-                  </p>
-                  <p class="item-card__old-price">
-                    30500 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    25500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
+                  <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price">30500 Р.</p>
+                  <p class="store-product__current-price button">25500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 2000
-                  </p>
-                  <p class="item-card__old-price"></p>
-                  <p class="item-card__current-price">
-                    12500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price store-product__old-price--none"></p>
+                  <p class="store-product__current-price button">12500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 3000
-                  </p>
-                  <p class="item-card__old-price">
-                    22500 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    15500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price">22500 Р.</p>
+                  <p class="store-product__current-price button">15500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 6000
-                  </p>
-                  <p class="item-card__old-price">
-                    30500 Р.
-                  </p>
-                  <p class="item-card__current-price">
-                    25500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
+                  <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                    <div class="store-product__product-actions">
+                      <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                      <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                    </div>
+                    <p class="store-product__old-price">30500 Р.</p>
+                    <p class="store-product__current-price button">25500 Р.</p>
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="item-card product-line__item-card">
-                  <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
-                  <p class="item-card__product-description">
-                    Перфоратор BOSCH
-                    BFG 2000
-                  </p>
-                  <p class="item-card__old-price"></p>
-                  <p class="item-card__current-price">
-                    15500 Р.
-                  </p>
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                  <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
+                  <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <div class="store-product__product-actions">
+                    <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                    <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                  </div>
+                  <p class="store-product__old-price store-product__old-price--none"></p>
+                  <p class="store-product__current-price button">12500 Р.</p>
                 </article>
               </li>
             </ul>
