Поправки ошибок вёрстки хлебных крошек

--- a/catalog.html
+++ b/catalog.html
@@ -104,6 +104,11 @@
     <main>
       <header class="page-header page-header--page-context centering-block">
         <ul class="page-header__breadcrumbs">
+          <li class="page-header__item page-header__item--main-page-link">
+            <a class="page-header__link page-header__link--main-page-link" href="index.html">
+              <span class="visually-hidden">Вернуться на главную страницу</span>
+            </a>
+          </li>
           <li class="page-header__item">
             <a class="page-header__link" href="#">Каталог</a>
           </li>
@@ -361,7 +366,7 @@
             Пара слов о перфораторах
           </h3>
           <p class="page-description__product-definition">
-            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
             Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
             В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
@@ -397,10 +402,10 @@
       </div>
       <div class="main-footer__middle-column">
         <div class="centering-block centering-block--footer-middle">
-          <p class="main-footer__office-location">
+            <p class="main-footer__office-location">
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               +7 (812) 555-05-55
-          </p>
+            </p>
           <ul class="main-footer__product-navigation">
             <li class="main-footer__navigation-item">
               <a class="main-footer__navigation-link" href="#">Материалы</a>
@@ -425,13 +430,19 @@
           </p>
           <ul class="main-footer__social-list">
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--vk" href="#">Наша группа в контакте</a>
+              <a class="main-footer__social-link main-footer__social-link--vk" href="#">
+                <span class="visually-hidden">Наша группа в контакте</span>
+              </a>
             </li>
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--facebook" href="#">Наша группа в фейсбуке</a>
+              <a class="main-footer__social-link main-footer__social-link--facebook" href="#">
+                <span class="visually-hidden">Наша группа в фейсбуке</span>
+              </a>
             </li>
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--instagram" href="#">Наша группа в инстаграме</a>
+              <a class="main-footer__social-link main-footer__social-link--instagram" href="#">
+                <span class="visually-hidden">Наша группа в инстаграме</span>
+              </a>
             </li>
           </ul>
           <div class="main-footer__developers">
