Стилизация модального окна добавления товара в корзину

--- a/catalog.html
+++ b/catalog.html
@@ -459,7 +459,9 @@
       </div>
     </footer>
     <section class="modal modal--cart-add">
-      <button class="modal__button-close" type="button">Закрыть окно</button>
+      <button class="modal__button-close" type="button">
+        <span class="visually-hidden">Закрыть окно</span>
+      </button>
       <h2 class="modal--cart-add__title">Товар добавлен в корзину!</h2>
       <div class="modal--cart-add__select-actions">
         <a class="modal--cart-add__buy-complete button" href="#">Оформить заказ</a>
