--- a/index.html
+++ b/index.html
@@ -462,5 +462,15 @@
         <span class="visually-hidden">Закрыть окно</span>
       </button>
     </section>
+    <section class="modal modal--cart-add">
+      <button class="modal__button-close" type="button">
+        <span class="visually-hidden">Закрыть окно</span>
+      </button>
+      <h2 class="modal--cart-add__title">Товар добавлен в корзину!</h2>
+      <div class="modal--cart-add__select-actions">
+        <a class="modal--cart-add__buy-complete button" href="#">Оформить заказ</a>
+        <button class="modal--cart-add__continue-select" type="button">Продолжить покупки</button>
+      </div>
+    </section>
   </body>
 </html>
