Стилизация индикаторов полей форм

--- a/catalog.html
+++ b/catalog.html
@@ -162,36 +162,43 @@
               <ul class="setup-product__makers-list">
                 <li class="setup-product__makers-item setup-product__makers-item--bosch-maker">
                   <label class="setup-product__label-field" for="bosch">Bosch</label>
-                  <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="bosch" checked>
+                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox"></span>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--interskol-maker">
                   <label class="setup-product__label-field" for="интерскол">Интерскол</label>
-                  <input class="setup-product__makers-field" type="checkbox" id="интерскол">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="интерскол">
+                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox"></span>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--makita-maker">
                   <label class="setup-product__label-field" for="makita">Makita</label>
-                  <input class="setup-product__makers-field" type="checkbox" id="makita" checked>
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="makita" checked>
+                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox"></span>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--dewalt-maker">
                   <label class="setup-product__label-field" for="dewalt">Dewalt</label>
-                  <input class="setup-product__makers-field" type="checkbox" id="dewalt">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="dewalt">
+                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox"></span>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--hitachi-maker">
                   <label class="setup-product__label-field" for="hitachi">Hitachi</label>
-                  <input class="setup-product__makers-field" type="checkbox" id="hitachi">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="hitachi">
+                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox"></span>
                 </li>
               </ul>
             </fieldset>
             <fieldset class="setup-product__group-block setup-product__group-block--charge-type">
               <legend class="setup-product__group-title setup-product__group-title--charge">Питание:</legend>
               <ul class="setup-product__charge-list">
-                <li class="setup-product__charge-item">
+                <li class="setup-product__charge-item setup-product__charge-item--storage">
                   <label class="setup-product__label-field" for="storage-battery">Аккумуляторные</label>
-                  <input class="setup-product__charge-field" type="radio" name="charge-type" value="storage-battery" id="storage-battery">
+                  <input class="setup-product__field setup-product__field--charge-field visually-hidden" type="radio" name="charge-type" value="storage-battery" id="storage-battery">
+                  <span class="setup-product__field-indicator setup-product__field-indicator--radio"></span>
                 </li>
-                <li class="setup-product__charge-item">
+                <li class="setup-product__charge-item setup-product__charge-item--network-charging">
                   <label class="setup-product__label-field" for="network-charging">Сетевые</label>
-                  <input class="setup-product__charge-field" type="radio" name="charge-type" value="network-charging" id="network-charging">
+                  <input class="setup-product__field setup-product__field--charge-field visually-hidden" type="radio" name="charge-type" value="network-charging" id="network-charging">
+                  <span class="setup-product__field-indicator setup-product__field-indicator--radio"></span>
                 </li>
               </ul>
             </fieldset>
